# libcarma

./: CMakeLists.txt  CONTRIBUTING.md  README.md  dependencies.cmake  dependency_versions.cmake  mkdocs.yaml  options.cmake
.devcontainer/: devcontainer.json
.github/workflows/: continuous_integration.yaml  github_pages.yaml
chrono/: CMakeLists.txt  options.cmake
chrono/include/libcarma/chrono/: kafka_clock.hpp
chrono/src/: kafka_clock.cpp
chrono/test/: CMakeLists.txt  test_kafka_clock.cpp
cmake/: CMakeLists.txt  libcarma_add_to_build.cmake  libcarma_cmakeConfig.cmake.in  libcarma_target_remove_export_name_prefix.cmake  libcarma_target_remove_library_prefix.cmake  libcarma_target_set_compiler_warnings.cmake  libcarma_target_set_install_rules.cmake
cmake/cmake/: libcarma_run_clang_tidy_with_build.cmake  libcarma_target_set_install_rules.cmake
docs/: CMakeLists.txt  index.md
exception/: CMakeLists.txt  dependencies.cmake  options.cmake
exception/cmake/: libcarma_exceptionConfig.cmake
exception/include/libcarma/exception/: exception.hpp
exception/test/: CMakeLists.txt  test_exception.cpp
metaprogramming/: CMakeLists.txt  mkdocs.yaml  options.cmake
metaprogramming/cmake/: libcarma_metaprogrammingConfig.cmake
metaprogramming/include/libcarma/metaprogramming/: always_false.hpp
metaprogramming/test/: CMakeLists.txt  test_always_false.cpp
sae_common/: CMakeLists.txt  dependencies.cmake  mkdocs.yaml  options.cmake
sae_common/cmake/: libcarma_sae_commonConfig.cmake
sae_common/docs/: index.md
sae_common/include/libcarma/sae_common/: bad_data_element_access.hpp  data_element.hpp  data_unavailable.hpp  units_extensions.hpp
sae_common/test/: CMakeLists.txt  test_bad_data_element_access.cpp  test_data_element.cpp
sae_j2735/: CMakeLists.txt  README.md  dependencies.cmake  mkdocs.yaml  options.cmake
sae_j2735/cmake/: libcarma_sae_j2735Config.cmake
sae_j2735/docs/: index.md
sae_j2735/include/libcarma/sae_j2735/: angle.hpp
sae_j2735/test/: CMakeLists.txt  test_angle.cpp
scripts/: build_project  install_dependencies  install_project  run_tests  setup_project
